--- a/api/pom.xml
+++ b/api/pom.xml
@@ -22,7 +22,11 @@
             <version>2.15.2</version>
         </dependency>
 
-        <!-- gRPC -->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20240303</version>
+        </dependency>
         <dependency>
             <groupId>io.grpc</groupId>
             <artifactId>grpc-netty-shaded</artifactId>
